[package]
name = "chunirichpresence"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows-sys = { version = "0.52", features =[
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_SystemServices"
] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"