[package]
name = "chunirichpresence"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows-sys = { version = "0.52", features =[
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_SystemServices",
    "Win32_System_Threading"
] }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "json", "native-tls"] }
serde_json = "1.0.149"
discord-rich-presence = "1.1.0"
configparser = "3.1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
